# enum_parity

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: check.yml  test.yml
examples/simple/: Cargo.toml
examples/simple/src/: lib.rs
src/: bit_par_iter.rs  int_repr.rs  lib.rs
tests/: ui.rs
tests/ui/: all_types_valid.rs  bad_arg_err.rs  bad_arg_err.stderr  cfg_attr.rs  const_discrimin.rs  const_discrimin.stderr  even_ok.rs  even_ok_explicit.rs  even_with_odd_no_override.rs  even_with_odd_no_override.stderr  even_with_odd_with_override.rs  even_with_odd_with_override_nonmonotonic.rs  even_with_odd_with_override_nonmonotonic_reassign.rs  even_with_odd_with_override_nonmonotonic_reassign.stderr  explicit_discriminant_err.rs  explicit_discriminant_err.stderr  missing_repr.rs  missing_repr.stderr  non_unit_enums.rs  odd_ok.rs  odd_with_even_no_override.rs  odd_with_even_no_override.stderr  on_const.rs  on_const.stderr  on_fn.rs  on_fn.stderr  on_impl.rs  on_impl.stderr  on_mod.rs  on_mod.stderr  on_struct.rs  on_struct.stderr  on_trait.rs  on_trait.stderr  on_type_alias.rs  on_type_alias.stderr  on_use.rs  on_use.stderr  overflow_err.rs  overflow_err.stderr  (+4 more)
