
[package]
name = "parity_enum"
version = "0.1.0-alpha"
edition = "2024"
rust-version = "1.87"

[lib]
proc-macro = true

[dependencies]
darling = "0.21.3"
proc-macro2 = { version = "1.0.104", features = ["span-locations"] }
quote = "1.0.42"
syn = { version = "2.0.111", features = ["extra-traits", "fold", "full", "visit"] }
itertools = "0.14.0"

[dev-dependencies]
trybuild = { version = ">=1.0", features = ["diff"] }

[lints]
clippy.cargo = "warn"
clippy.correctness = "warn"
clippy.suspicious = "warn"
clippy.complexity = "warn"
clippy.perf = "warn"
clippy.style = "warn"
clippy.pedantic = "warn"
clippy.nursery = "warn"
