[package]
name = "enum_parity"
version = "0.2.0-alpha"
edition = "2024"
rust-version = "1.87"

readme = "README.md"

repository = "https://github.com/przb/enum_parity"
description = "a macro that enforces enum discriminant bit parity"
authors = ["Ben Przybyszewski"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/enum_parity"

keywords = ["parity", "enum", "discriminant"]
categories = ["encoding", "mathematics"]

[lib]
proc-macro = true

[dependencies]
darling = "0.21.3"
proc-macro2 = { version = "1.0.104", features = ["span-locations"] }
quote = "1.0.42"
syn = { version = "2.0.111", features = ["extra-traits", "fold", "full", "visit"] }
itertools = "0.14.0"

[dev-dependencies]
trybuild = { version = ">=1.0", features = ["diff"] }

[lints]
clippy.cargo = "warn"
clippy.correctness = "warn"
clippy.suspicious = "warn"
clippy.complexity = "warn"
clippy.perf = "warn"
clippy.style = "warn"
clippy.pedantic = "warn"
clippy.nursery = "warn"
