[package]
name = "enum_parity"
version = "0.2.0"
edition = "2024"
rust-version = "1.87"

readme = "README.md"

repository = "https://github.com/przb/enum_parity"
description = "a macro that enforces enum discriminant bit parity"
authors = ["Ben Przybyszewski"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/enum_parity"

keywords = ["parity", "enum", "discriminant"]
categories = ["encoding", "mathematics"]

[lib]
proc-macro = true

[dependencies]
darling = "0.21.3"
proc-macro2 = { version = "1.0.104", features = ["span-locations"] }
quote = "1.0.42"
syn = { version = "2.0.111", features = ["extra-traits", "fold", "full", "visit"] }
itertools = "0.14.0"

[dev-dependencies]
postcard = { version = "1.1.3", features = ["use-std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_repr = "0.1.20"
trybuild = { version = ">=1.0", features = ["diff"] }

[lints]
clippy.cargo = { level = "warn", priority = -1 }
clippy.correctness = { level = "warn", priority = -1 }
clippy.suspicious = { level = "warn", priority = -1 }
clippy.complexity = { level = "warn", priority = -1 }
clippy.perf = { level = "warn", priority = -1 }
clippy.style = { level = "warn", priority = -1 }
clippy.pedantic = { level = "warn", priority = -1 }
clippy.nursery = { level = "warn", priority = -1 }
clippy.option_if_let_else = "allow" # the darling `default` attribute causes issues with this lint
